--- a/app/src/main/res/layout/fragment_app_layout.xml
+++ b/app/src/main/res/layout/fragment_app_layout.xml
@@ -30,14 +30,10 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/ip">
 
-        <LinearLayout
-            android:id="@+id/fileContainer"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-        </LinearLayout>
+            android:layout_height="match_parent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 
